Intrroduce explict flags for testing mode
This revision introduces reSeed and predResistance flags to define the
mode of testing and the corresponding data. See also the table in
Section 3.1 The array otherInput contains the test data for the
configured mode of testing. Added a new example for the case of reSeed
and predResistance both set to "no".

--- a/artifacts/acvp_sub_drbg.html
+++ b/artifacts/acvp_sub_drbg.html
@@ -400,7 +400,7 @@
 
   <meta name="dct.creator" content="Vassilev, A., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subdrbg-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2017-3-21" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-3-23" />
   <meta name="dct.abstract" content="This document defines the JSON schema for testing DRBG implementations from SP 800-90A  with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for testing DRBG implementations from SP 800-90A  with the ACVP specification." />
 
@@ -421,10 +421,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">March 21, 2017</td>
+  <td class="right">March 23, 2017</td>
 </tr>
 <tr>
-  <td class="left">Expires: September 22, 2017</td>
+  <td class="left">Expires: September 24, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -445,7 +445,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on September 22, 2017.</p>
+<p>This Internet-Draft will expire on September 24, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -1167,20 +1167,8 @@
       <td class="left"/>
     </tr>
     <tr>
-      <td class="left">predResistanceInput</td>
-      <td class="left">array of additonal input/entropy input value pairs for prediction resistance testing. See <a href="#vs_prtc_table">Table 8</a></td>
-      <td class="left">array</td>
-      <td class="left">No</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
-      <td class="left">reseedInput</td>
-      <td class="left">array of additonal input/entropy input value pairs for reseeding testing. See <a href="#vs_prtc_table">Table 8</a></td>
+      <td class="left">otherInput</td>
+      <td class="left">array of additonal input/entropy input value pairs for testing. See <a href="#vs_prtc_table">Table 8</a></td>
       <td class="left">array</td>
       <td class="left">No</td>
     </tr>
@@ -1431,6 +1419,7 @@
                     {
                       "derFunc":"yes",
                       "predResistance": "yes",
+                      "reSeed": "yes",
                       "entropyInputLen":"112",
                       "nonceLen":"56",
                       "persoStringLen":"112",
@@ -1442,7 +1431,7 @@
                           "entropyInput":"78aac2cb444594e29dc97b0195b5",
                           "nonce":"41ef9c67ffe438",
                           "persoString":"b8e84de200a9239a043a7a9a6a03",
-                          "predResistsnceInput" : [
+                          "otherInput" : [
                              {"additionalInput":"f1e8edf002b331ec49ec0c1f18fa",
                                "entropyInput": "6cd4096638bbaeda28289582a10d"},
                             {"additionalInput" : "f5357737023e3304508a00b3ba02",
@@ -1454,7 +1443,7 @@
                           "entropyInput" : "b8ab88b9c5fda8544b90a043684e",
                           "nonce": "f1bcc6ff60dd37",
                           "persoString" : "018c1f9d22f3c7f701a5f1cab07d",
-                          "predResistsnceInput" : [
+                          "otherInput" : [
                              {"additionalInput" : "356a6e908bfce2d660f20f3fbd1e",
                               "entropyInput" : "bed693401bfd53ce4c36c2233ada"},
                              {"additionalInput" : "4321b3ab3a0ce88e02bdcd0306d9",
@@ -1476,6 +1465,7 @@
                   "testGroups": [
                     {
                       "predResistance": "yes",
+                      "reSeed": "no",
                       "entropyInputLen":"256",
                       "nonceLen":"128",
                       "persoStringLen":"256",
@@ -1487,7 +1477,7 @@
                           "entropyInput":"ee3392c5f3de6f3f8c4f28d852afacd2cbaa89ed48d1c5d4311662962aa70a98",
                           "nonce":"b991a820fac75fd02642ad8fa651eda4",
                           "persoString":"30f3a50b0e2309dab93ea2aa095e5df8e4b2a42690572b31e53fb79a195481e5",
-                          "predResistsnceInput" : [
+                          "otherInput" : [
                              {"additionalInput":"4ea46abe95b2e4184113f908ae30123207d481908b7af7ef348657bbf3b4a002",
                                "entropyInput": "e4413a2e404f12c644b0b1d7a49a0fbf3d8703d571ffd02168c11b4ade6fc903"},
                              {"additionalInput" : "61b7204c8fef294f2a9f2e73a83a8a7a04c38e3b3eaaed1b920abfceab912492",
@@ -1499,7 +1489,7 @@
                           "entropyInput" : "a0ace75784b97224de2957e5f60dc85b25331fcf7901f37418d3c9de17ed4261",
                           "nonce": "b671308068fc7909a360c772f62a4c5e",
                           "persoString" : "338d5f2bd93262da154385e9ed90b7862e3c892f13e1d7d19924b2eb8b3bab21",
-                          "predResistsnceInput" : [
+                          "otherInput" : [
                              {"additionalInput" : "7acd8bfae17ff4edbac3437817d6b3fce12a04c4034ac6bef0b1b88f7dcd7c85",
                               "entropyInput" : "47b26bbe93a5cc19a410523a072e04333f06c54af0049fc41e66213763020ef7"},
                              {"additionalInput" : "d4b24c74538e3a1083a2cc0a4414a9f558f0a2dc186e3b9a5294cd541acdad87",
@@ -1521,6 +1511,7 @@
                   "testGroups": [
                     {
                       "predResistance": "yes",
+                      "reSeed": "no",
                       "entropyInputLen":"256",
                       "nonceLen":"128",
                       "persoStringLen":"0",
@@ -1532,7 +1523,7 @@
                           "entropyInput":"ae0a3acd541d0d582a8510f3028caa143fe1e5226a8469d40b979d3a0d1bbe69",
                           "nonce":"786f03ad697332d74fad7a14604cee44",
                           "persoString":"",
-                          "predResistsnceInput" : [
+                          "otherInput" : [
                                {"additionalInput":"",
                                 "entropyInput": "4852aed7c47fd305aa680a6557d2f6e4112342a04eb91ed9f843671d0673cecd"},
                                {"additionalInput" : "",
@@ -1544,7 +1535,7 @@
                           "entropyInput" : "26d8c9a9b982cd7016c9208fe95b2f4003e0ebf84c1e80a4087f2bc3e0fc5674",
                           "nonce": "36dff124f908a95a022edf615618cd31",
                           "persoString" : "",
-                          "predResistsnceInput" : [
+                          "otherInput" : [
                              {"additionalInput" : "",
                               "entropyInput" : "648bbdc4d40571905c69e7e2b15e36e08c812a6c509cef68bf75281e87f7a154"},
                              {"additionalInput" : "",
@@ -1556,7 +1547,7 @@
                   ]
                 }
             </pre>
-<p id="rfc.section.B.p.4">The following is a example JSON object for hashDRBG test vectors sent from the ACVP server to the crypto module. In this example the implementation is tested with "predResistance": "no", option.</p>
+<p id="rfc.section.B.p.4">The following is a example JSON object for hashDRBG test vectors sent from the ACVP server to the crypto module. In this example the implementation is tested with "predResistance": "no", "reSeed" : "yes" options.</p>
 <pre>
                 {
                   "version": "0.2",
@@ -1566,6 +1557,7 @@
                   "testGroups": [
                     {
                       "predResistance": "no",
+                      "reSeed": "yes",
                       "entropyInputLen":"256",
                       "nonceLen":"128",
                       "persoStringLen":"256",
@@ -1577,11 +1569,11 @@
                           "entropyInput":"860d051cedbb935a32ef3ba4f4437cf67c1a85a46a13a7f4db382933629890a8",
                           "nonce":"5813070f9774d21e644d64e8d291b511",
                           "persoString":"545ba29faf1bb1bf26756782f9c1fa00170f47012b05168ad82565f594af46b1",
-                          "reseedInput" : [
+                          "otherInput" : [
                                {"additionalInput":"95b082d603393b2207975607ac6b6472bd458c5d3d4727e1e92ebc031130231d",
                                 "entropyInput": "2e92955b17e7e76fc75a478ba88f5f5b805c42945cbbcf8c669b1996c52ae3af"},
                                {"additionalInput" : "ddfa41eb363d76e3943689a13d31ebd38408f26d51a83289e3d52c2081b96ad0",
-                                "entropyInput" : ""}
+                                "entropyInput" : ""},
                                {"additionalInput" : "edb884991dd2507de07647901b8880d9db48b0f07d90a9ca8cb399581fa4dd55",
                                 "entropyInput" : ""}
                             ]
@@ -1591,12 +1583,58 @@
                           "entropyInput" : "371d2944c9ace670684d34d0bdc2eb45b0193fa6e7ec216867d8eb83f1f34104",
                           "nonce": "4bb34ab1e882d97687c3f8935913ee0f",
                           "persoString" : "c5b03354a9fad34a8eb5bd28613ac34e48898979501b10ce92e9a46e19c6de42",
-                          "reseedInput" : [
+                          "otherInput" : [
                              {"additionalInput" : "6e3fa8e58779fec2b5028b28fae40d25023d8d4725a91b132219fd3d3eb6e1f0",
                               "entropyInput" : "afd7e6b0b48a526e896dab46cc9689fce20df47a0a50fad812f08b310b96bccf"},
                              {"additionalInput" : "deb8ed574906115a3e46b822c86dbf59f33c78052451f3a68f0eb08973bc1047",
-                              "entropyInput" : ""}
+                              "entropyInput" : ""},
                              {"additionalInput" : "a554bb9b5986b89161332649dd400b2a157656f8a1a8cf4a8fb875fa3d568140",
+                              "entropyInput" : ""}
+                          ]
+                        }
+                      ]
+                    }
+                  ]
+                }
+            </pre>
+<p id="rfc.section.B.p.5">The following is a example JSON object for hashDRBG test vectors sent from the ACVP server to the crypto module. In this example the implementation is tested with "predResistance": "no", "reSeed" : "no" options.</p>
+<pre>
+                {
+                  "version": "0.2",
+                  "vectorSetId": "1167",
+                  "algorithm": "hashDRBG",
+                  "mode": "SHA-256",
+                  "testGroups": [
+                    {
+                      "predResistance": "no",
+                      "reSeed": "no",
+                      "entropyInputLen":"256",
+                      "nonceLen":"128",
+                      "persoStringLen":"256",
+                      "additionalInputLen":"256",
+                      "returnedBitsLen":"1024",                  
+                      "tests": [
+                        {
+                          "tcId": "4151",
+                          "entropyInput":"090db63c22de171068527c6ad049e4aade69d5b590efb8f582604e6e07a2c2dc",
+                          "nonce":"6f7c6bec9825079cabd9478d88f337c8",
+                          "persoString":"c2f1a5980619779253dc54e2d4a52bf17aed023f566cfaa109ae96e031b64bd0",
+                          "otherInput" : [
+                               {"additionalInput":"3fc72d3cc74b6124d49fa3269be61888e5e0e7a79d16def1d24aa9c7bcb9244b",
+                                "entropyInput": ""},
+                               {"additionalInput" : "968a3e79dbf0d3a46c715ee2d65d7cc5dc6f74d4256ab63d41250de5ba3ddbfc",
+                                "entropyInput" : ""}
+                            ]
+                          },
+                        {
+                          "tcId": "4152",
+                          "entropyInput" : "bd0e2dbba872bb62ca2897be7fd038f5c7162eb9358ef970f120ea32f6fd3cb9",
+                          "nonce": "a97dfbaea505a3e36210a85636197b2d",
+                          "persoString" : "7d0de87d097551feffb7c5232645878df2579ff93a2ed07d5f357295bd5753d8",
+                          "otherInput" : [
+                             {"additionalInput" : "fe1adf1da7c5275b1eaa3fe3010655ed9d5539eb47cc64c864b6c1fa920b0d07",
+                              "entropyInput" : ""},
+                             {"additionalInput" : "1df719a96103c452e644f6a4d0fd8d80865328314ec4af24ef9fdf6da4d2cd8e",
                               "entropyInput" : ""}
                           ]
                         }
@@ -1671,6 +1709,23 @@
                        {
                             "tcId": "3152",
                             "returnedBits": "6452be2ee730d7245b28efa7a0dcd50299aaa126c5aa6dc8be3ae1c75ff54c412b1776a4beba8cb7c7bf9e2ec8c7fe2de5f51c4d740e20f5d9bbef3b743c81b958e05880ad9bbc8794be156e6d4b2f6a826787ce1fb479e449a27aa99831eba6c0fc990eabff928fafa703619f85060090548e2a23911a1e5adec5ac15a29798"
+                       }
+                    ]
+                }
+            </pre>
+<p id="rfc.section.C.p.5">The following is a example JSON object for hashDRBG test results sent from the crypto module to the ACVP server.</p>
+<pre>
+                {
+                    "version": "0.2",
+                    "vectorSetId": "1167",
+                    "testResults": [
+                        {
+                            "tcId": "4151",
+                            "returnedBits ": "5dbfd26651bc71597e8f5b06c650bbf2c8117c0735bd903027628b7d7e0658abb818ad63f67d5d9f38f3bc976a0d3c89764122acf3b6a704cd9af0c3ebbde3cd90e4787a4b90267752e5585188f572b2a7f7dfa424cf05f5a2bf49540b90a887af4b352ddf226ee62809f329652faba219c27b430172feb58b875d2611324f9e"
+                        },
+                       {
+                            "tcId": "4152",
+                            "returnedBits": "ff3cce0b5585172b1f93b22a00d9757f60f15f773b33a93b40f01a5e00328dcc78e8827897ec141132104dfb670b0d8ce7a60ab66e89aa5322ea3a497a6861dc0457ab86b1c28c290cef05fd52a78641172f5ef5a1511d31c8eeb9373cb0098c24e12abe3f907a1633f21defdfd2b232dedca7035de0bda31585d0b0321a9009"
                        }
                     ]
                 }
