--- a/artifacts/acvp_sub_hashmac.html
+++ b/artifacts/acvp_sub_hashmac.html
@@ -377,10 +377,9 @@
 <link href="#rfc.section.1" rel="Chapter" title="1 Introduction"/>
 <link href="#rfc.section.1.1" rel="Chapter" title="1.1 Requirements Language"/>
 <link href="#rfc.section.2" rel="Chapter" title="2 Capabilities Registration"/>
-<link href="#rfc.section.2.1" rel="Chapter" title="2.1 HASH Algorithm Capabilities Registration"/>
-<link href="#rfc.section.2.2" rel="Chapter" title="2.2 Required Prerequisite Algorithms for MAC Validations"/>
-<link href="#rfc.section.2.3" rel="Chapter" title="2.3 MAC Algorithm Capabilities Registration"/>
-<link href="#rfc.section.2.4" rel="Chapter" title="2.4 Supported MAC Algorithms"/>
+<link href="#rfc.section.2.1" rel="Chapter" title="2.1 Required Prerequisite Algorithms for MAC Validations"/>
+<link href="#rfc.section.2.2" rel="Chapter" title="2.2 MAC Algorithm Capabilities Registration"/>
+<link href="#rfc.section.2.3" rel="Chapter" title="2.3 Supported MAC Algorithms"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 Test Vectors"/>
 <link href="#rfc.section.3.1" rel="Chapter" title="3.1 Test Groups JSON Schema"/>
 <link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Case JSON Schema"/>
@@ -462,10 +461,9 @@
   	<li>1.   <a href="#rfc.section.1">Introduction</a></li>
 <ul><li>1.1.   <a href="#rfc.section.1.1">Requirements Language</a></li>
 </ul><li>2.   <a href="#rfc.section.2">Capabilities Registration</a></li>
-<ul><li>2.1.   <a href="#rfc.section.2.1">HASH Algorithm Capabilities Registration</a></li>
-<li>2.2.   <a href="#rfc.section.2.2">Required Prerequisite Algorithms for MAC Validations</a></li>
-<li>2.3.   <a href="#rfc.section.2.3">MAC Algorithm Capabilities Registration</a></li>
-<li>2.4.   <a href="#rfc.section.2.4">Supported MAC Algorithms</a></li>
+<ul><li>2.1.   <a href="#rfc.section.2.1">Required Prerequisite Algorithms for MAC Validations</a></li>
+<li>2.2.   <a href="#rfc.section.2.2">MAC Algorithm Capabilities Registration</a></li>
+<li>2.3.   <a href="#rfc.section.2.3">Supported MAC Algorithms</a></li>
 </ul><li>3.   <a href="#rfc.section.3">Test Vectors</a></li>
 <ul><li>3.1.   <a href="#rfc.section.3.1">Test Groups JSON Schema</a></li>
 <li>3.2.   <a href="#rfc.section.3.2">Test Case JSON Schema</a></li>
@@ -491,103 +489,9 @@
 <h1 id="rfc.section.2"><a href="#rfc.section.2">2.</a> <a href="#caps_reg" id="caps_reg">Capabilities Registration</a></h1>
 <p id="rfc.section.2.p.1">ACVP requires crypto modules to register their capabilities.  This allows the crypto module to advertise support for specific algorithms, notifying the ACVP server which algorithms need test vectors generated for the validation process.  This section describes the constructs for advertising support of hash algorithms to the ACVP server.</p>
 <p id="rfc.section.2.p.2">The algorithm capabilities are advertised as JSON objects within the 'algorithms' value of the ACVP registration message.  The 'algorithms' value is an array, where each array element is an individual JSON object defined in this section.  The 'algorithms' value is part of the 'capability_exchange' element of the ACVP JSON registration message.  See the ACVP specification for details on the registration message.  Each algorithm capability advertised is a self-contained JSON object.  The following JSON values are used for hash algorithm capabilities:</p>
-<h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#hash_caps_reg" id="hash_caps_reg">HASH Algorithm Capabilities Registration</a></h1>
+<h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#prereq_algs" id="prereq_algs">Required Prerequisite Algorithms for MAC Validations</a></h1>
+<p id="rfc.section.2.1.p.1">Each MAC implementation relies on other cryptographic primitives.  For example, CMAC uses an underlying SHA algorithm. Each of these underlying algorithm primitives must be validated, either separately or as part of the same submission. ACVP provides a mechanism for specifying the required prerequisites:</p>
 <div id="rfc.table.1"/>
-<div id="caps_table"/>
-<table cellpadding="3" cellspacing="0" class="tt full center">
-  <caption>Hash Algorithm Capabilities JSON Values</caption>
-  <thead>
-    <tr>
-      <th class="left">JSON Value</th>
-      <th class="left">Description</th>
-      <th class="left">JSON type</th>
-      <th class="left">Valid Values</th>
-      <th class="left">Optional</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td class="left">algorithm</td>
-      <td class="left">The hash algorithm and mode to be validated.</td>
-      <td class="left">value</td>
-      <td class="left">See <a href="#supported_algs">Section 2.4</a></td>
-      <td class="left">No</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
-      <td class="left">inByte</td>
-      <td class="left">Implementation only hashes byte-oriented messages</td>
-      <td class="left">value</td>
-      <td class="left">yes, no</td>
-      <td class="left">No</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
-      <td class="left">inEmpty</td>
-      <td class="left">Implementation does not accept Null (zero-length) messages</td>
-      <td class="left">value</td>
-      <td class="left">yes, no</td>
-      <td class="left">No</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
-      <td class="left">outByte</td>
-      <td class="left">Implementation only outputs  byte-oriented messages</td>
-      <td class="left">value</td>
-      <td class="left">yes, no</td>
-      <td class="left">Yes</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
-      <td class="left">inLen</td>
-      <td class="left">Minimum input length</td>
-      <td class="left">value</td>
-      <td class="left">0-65536</td>
-      <td class="left">Yes</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
-      <td class="left">outLen</td>
-      <td class="left">Maximum output length</td>
-      <td class="left">value</td>
-      <td class="left">0-65536</td>
-      <td class="left">Yes</td>
-    </tr>
-  </tbody>
-</table>
-<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#prereq_algs" id="prereq_algs">Required Prerequisite Algorithms for MAC Validations</a></h1>
-<p id="rfc.section.2.2.p.1">Each MAC implementation relies on other cryptographic primitives.  For example, CMAC uses an underlying SHA algorithm. Each of these underlying algorithm primitives must be validated, either separately or as part of the same submission. ACVP provides a mechanism for specifying the required prerequisites:</p>
-<div id="rfc.table.2"/>
 <div id="rereqs_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Required MAC Prerequisite Algorithms JSON Values</caption>
@@ -638,9 +542,9 @@
     </tr>
   </tbody>
 </table>
-<h1 id="rfc.section.2.3"><a href="#rfc.section.2.3">2.3.</a> <a href="#mac_caps_reg" id="mac_caps_reg">MAC Algorithm Capabilities Registration</a></h1>
-<p id="rfc.section.2.3.p.1">Each algorithm capability advertised is a self-contained JSON object using the following values.</p>
-<div id="rfc.table.3"/>
+<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#mac_caps_reg" id="mac_caps_reg">MAC Algorithm Capabilities Registration</a></h1>
+<p id="rfc.section.2.2.p.1">Each algorithm capability advertised is a self-contained JSON object using the following values.</p>
+<div id="rfc.table.2"/>
 <div id="caps_table2"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>MAC Algorithm Capabilities JSON Values</caption>
@@ -658,7 +562,7 @@
       <td class="left">algorithm</td>
       <td class="left">The MAC algorithm and mode to be validated.</td>
       <td class="left">value</td>
-      <td class="left">See <a href="#supported_algs">Section 2.4</a></td>
+      <td class="left">See <a href="#supported_algs">Section 2.3</a></td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -672,7 +576,7 @@
       <td class="left">prereqVals</td>
       <td class="left">prerequistie algorithm validations</td>
       <td class="left">array of prereqAlgVal objects</td>
-      <td class="left">See <a href="#prereq_algs">Section 2.2</a></td>
+      <td class="left">See <a href="#prereq_algs">Section 2.1</a></td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -761,8 +665,8 @@
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.2.3.p.2">Note: Some optional values are required depending on the algorithm. Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
-<p id="rfc.section.2.3.p.3">macLen for CMAC contains an array of 3 values defined by these rules:</p>
+<p id="rfc.section.2.2.p.2">Note: Some optional values are required depending on the algorithm. Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
+<p id="rfc.section.2.2.p.3">macLen for CMAC contains an array of 3 values defined by these rules:</p>
 <p/>
 
 <ul>
@@ -770,7 +674,7 @@
   <li>A second CMAC length supported</li>
   <li>The largest CMAC length supported</li>
 </ul>
-<p id="rfc.section.2.3.p.5">msgLen for CMAC contains an array of 5 values defined by these rules:</p>
+<p id="rfc.section.2.2.p.5">msgLen for CMAC contains an array of 5 values defined by these rules:</p>
 <p/>
 
 <ul>
@@ -778,8 +682,8 @@
   <li>Two message lengths NOT divisible by block size</li>
   <li>The largest message length supported</li>
 </ul>
-<h1 id="rfc.section.2.4"><a href="#rfc.section.2.4">2.4.</a> <a href="#supported_algs" id="supported_algs">Supported MAC Algorithms</a></h1>
-<p id="rfc.section.2.4.p.1">The following hash algorithms may be advertised by the ACVP compliant crypto module:</p>
+<h1 id="rfc.section.2.3"><a href="#rfc.section.2.3">2.3.</a> <a href="#supported_algs" id="supported_algs">Supported MAC Algorithms</a></h1>
+<p id="rfc.section.2.3.p.1">The following hash algorithms may be advertised by the ACVP compliant crypto module:</p>
 <p/>
 
 <ul>
@@ -802,7 +706,7 @@
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
 <p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual crypto algorithm, such as SHA-1, SHA2-224, SHA3-256, etc.  This section describes the JSON schema for a test vector set used with hash crypto algorithms.</p>
 <p id="rfc.section.3.p.2">The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client.  The following table describes the JSON elements at the top level of the hierarchy.  </p>
-<div id="rfc.table.4"/>
+<div id="rfc.table.3"/>
 <div id="vs_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set JSON Object</caption>
@@ -836,7 +740,7 @@
     </tr>
     <tr>
       <td class="left">algorithm</td>
-      <td class="left">The hash algorithm and mode used for the test vectors.  See <a href="#supported_algs">Section 2.4</a> for possible values.</td>
+      <td class="left">The hash algorithm and mode used for the test vectors.  See <a href="#supported_algs">Section 2.3</a> for possible values.</td>
       <td class="left">value</td>
     </tr>
     <tr>
@@ -853,7 +757,7 @@
 </table>
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
 <p id="rfc.section.3.1.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group.  The following table describes the secure hash and CMAC JSON elements of the Test Group JSON object.</p>
-<div id="rfc.table.5"/>
+<div id="rfc.table.4"/>
 <div id="vs_tg_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Test Group JSON Object</caption>
@@ -887,7 +791,7 @@
   </tbody>
 </table>
 <p id="rfc.section.3.1.p.2">The following table describes the message authentication JSON elements of the Test Group JSON object.</p>
-<div id="rfc.table.6"/>
+<div id="rfc.table.5"/>
 <div id="vs_tg_table2"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Test Group JSON Object</caption>
@@ -922,7 +826,7 @@
 </table>
 <h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Case JSON Schema</a></h1>
 <p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test cases.  Each test case is a JSON object that represents a single test vector to be processed by the ACVP client.  The following table describes the JSON elements for each secure hash test vector.</p>
-<div id="rfc.table.7"/>
+<div id="rfc.table.6"/>
 <div id="vs_tc_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Test Case JSON Object</caption>
@@ -980,7 +884,7 @@
   </tbody>
 </table>
 <p id="rfc.section.3.2.p.2">The following table describes the JSON elements for each message authentication test vector.</p>
-<div id="rfc.table.8"/>
+<div id="rfc.table.7"/>
 <div id="vs_tc_table2"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Test Case JSON Object</caption>
@@ -1087,7 +991,7 @@
 </table>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#vector_responses" id="vector_responses">Test Vector Responses</a></h1>
 <p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the response vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
-<div id="rfc.table.9"/>
+<div id="rfc.table.8"/>
 <div id="vr_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
