--- a/artifacts/acvp_sub_rsa.html
+++ b/artifacts/acvp_sub_rsa.html
@@ -681,22 +681,8 @@
       <td class="left">algorithm</td>
       <td class="left">The RSA algorithm to be validated</td>
       <td class="left">value</td>
-      <td class="left">"RSA-KeyGen", "RSA-SigGen", "RSA-SigVer"</td>
+      <td class="left">"RSA"</td>
       <td class="left">No</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
-      <td class="left">infoGeneratedByServer</td>
-      <td class="left">This flag indicates that the server is responsible for generating inputs for Key Generation tests</td>
-      <td class="left">value</td>
-      <td class="left">true or false</td>
-      <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left"/>
@@ -1000,6 +986,20 @@
       <td class="left">value</td>
       <td class="left">"B.3.2", "B.3.3", "B.3.4", "B.3.5", "B.3.6"</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">infoGeneratedByServer</td>
+      <td class="left">This flag indicates that the server is responsible for generating inputs for Key Generation tests. This flag is not relevant to KeyGen mode "B.3.3" Random Probable Primes</td>
+      <td class="left">value</td>
+      <td class="left">true or false</td>
+      <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left"/>
@@ -1418,12 +1418,6 @@
       <td class="left">"fixed" or "random"</td>
       <td class="left">Yes</td>
     </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
   </tbody>
 </table>
 <h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Case JSON Schema</a></h1>
@@ -1831,7 +1825,6 @@
    {
       "algorithm": "RSA",
       "prereqVals": [{"algorithm": "DRBG", "valValue": "1234"}, {"algorithm": "SHA", "valValue": "5678"}],
-      "infoGeneratedByServer": true,
       "algSpecs" : 
       [
          {"modeSpecs" : {
@@ -1839,7 +1832,8 @@
               "capSpecs" :  {
                       "pubExp" : "fixed",
                       "fixedPubExpVal" : "010001",
-                      "randPQ" : 1,
+                      "infoGeneratedByServer": true,
+                      "randPQ" : "B.3.2",
                       "capProvPrime" : 
                             [
                                 {   "modulo" : 2048,
@@ -1861,7 +1855,6 @@
 <pre>
    {
     "algorithm":"RSA",
-    "infoGeneratedByServer": true,
     "prereqVals":[
       {
         "algorithm":"DRBG",
@@ -1900,7 +1893,6 @@
 <pre>
    {
       "algorithm": "RSA",
-      "infoGeneratedByServer": false,
        "prereqVals": [{"algorithm": "DRBG", "valValue": "same"}, {"algorithm": "SHA", "valValue": "same"}],
       "algSpecs" : 
       [
@@ -1909,6 +1901,7 @@
            "capSpecs" : {
                "pubExp" : "fixed",
                "fixedPubExpVal" : "010001",
+               "infoGeneratedByServer": false,
                "randPQ" : "B.3.5",
                "capsProvProbPrime" : 
                     [
@@ -2085,10 +2078,10 @@
    { "acvVersion": "0.4" },
    { "vsId": 1133,
       "algorithm": "RSA",
-      "infoGeneratedByServer": false,
       "testGroups" : [
              {
                  "mode": "keyGen",
+                 "infoGeneratedByServer": false,
                  "pubExp" : "random",
                  "randPQ" : "B.3.2",
                  "modRSA" : 2048,
@@ -2104,6 +2097,7 @@
              },
              {
                 "mode": "keyGen",
+                "infoGeneratedByServer": false,
                 "pubExp": "random",
                 "randPQ": "B.3.2",
                 "modRSA" : 3072,
@@ -2119,6 +2113,7 @@
               },
              {
                  "mode": "keyGen",
+                 "infoGeneratedByServer": false,
                  "pubExp" : "random",
                  "randPQ" : "B.3.4",
                  "modRSA" : 2048,
@@ -2134,6 +2129,7 @@
              },
              {
                 "mode": "keyGen",
+                "infoGeneratedByServer": false,
                 "pubExp": "random",
                 "randPQ": "B.3.4",
                 "modRSA" : 3072,
@@ -2149,6 +2145,7 @@
               },
              {
                  "mode": "keyGen",
+                 "infoGeneratedByServer": false,
                  "pubExp" : "random",
                  "randPQ" : "B.3.5",
                  "modRSA" : 2048,
@@ -2164,6 +2161,7 @@
              },
              {
                 "mode": "keyGen",
+                "infoGeneratedByServer": false,
                 "pubExp": "random",
                 "randPQ": "B.3.5",
                 "modRSA" : 3072,
@@ -2179,6 +2177,7 @@
               },
              {
                  "mode": "keyGen",
+                 "infoGeneratedByServer": false,
                  "pubExp" : "random",
                  "randPQ" : "B.3.6",
                  "modRSA" : 2048,
@@ -2194,6 +2193,7 @@
              },
              {
                 "mode": "keyGen",
+                "infoGeneratedByServer": false,
                 "pubExp": "random",
                 "randPQ": "B.3.6",
                 "modRSA" : 3072,
