--- a/artifacts/acvp_sub_mac.html
+++ b/artifacts/acvp_sub_mac.html
@@ -607,6 +607,20 @@
 <td class="left"></td>
 </tr>
 <tr>
+<td class="left">direction</td>
+<td class="left">The MAC direction(s) to test. Only applies to CMAC.</td>
+<td class="left">array</td>
+<td class="left">gen, ver</td>
+<td class="left">No</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
 <td class="left">keyRange1</td>
 <td class="left">If IUT supports key sizes(KS) less than Block size(BS), enter 2 distinct key sizes. If IUT only supports one KS less than BS, enter a single size in the array and do not pass keyrange2 or keyblock field.</td>
 <td class="left">array</td>
@@ -649,9 +663,16 @@
 <td class="left"></td>
 </tr>
 <tr>
+<td class="left">msgLen</td>
+<td class="left">The CMAC message lengths supported.  Min/max/increment and values must be mod 8.</td>
+<td class="left">Domain</td>
+<td class="left">0-524288</td>
+<td class="left">Yes</td>
+</tr>
+<tr>
 <td class="left">macLen</td>
-<td class="left">The supported mac sizes. (range dependent on SHA size)</td>
-<td class="left">array</td>
+<td class="left">The supported mac sizes. Min/max/increment and values must be mod 8. (range dependent on SHA size).</td>
+<td class="left">Domain</td>
 <td class="left">8-524288</td>
 <td class="left">No</td>
 </tr>
@@ -661,13 +682,6 @@
 <td class="left"></td>
 <td class="left"></td>
 <td class="left"></td>
-</tr>
-<tr>
-<td class="left">msgLen</td>
-<td class="left">The CMAC message lengths supported</td>
-<td class="left">array</td>
-<td class="left">0-524288</td>
-<td class="left">Yes</td>
 </tr>
 </tbody>
 </table>
@@ -782,7 +796,19 @@
 <tbody>
 <tr>
 <td class="left">testType</td>
-<td class="left">Test category type (ver or gen for CMAC, gen for HMAC)</td>
+<td class="left">Test category type (AFT)</td>
+<td class="left">value</td>
+<td class="left">No</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">direction</td>
+<td class="left">The direction of the tests - gen or ver - only applies to CMAC</td>
 <td class="left">value</td>
 <td class="left">No</td>
 </tr>
@@ -1057,8 +1083,9 @@
                 "algorithm": "CMAC-TDES",
                 "prereqVals" : [{"algorithm" : "AES", "valValue" : "123456"},
 		                {"algorithm" : "TDES", "valValue" : "123456"}],
-		"macLen" : [ 8, 64],
-		"msgLen" : [ 0, 256, 120, 248, 320 ]
+                "direction" : [ "gen", "ver" ],
+		            "macLen" : [ 8, 64],
+		            "msgLen" : [ 0, 256, 120, 248, 320 ]
             }
             </pre>
 <h1 id="rfc.appendix.B">
@@ -1072,7 +1099,7 @@
                   "algorithm": "HMAC-SHA-1",
                   "testGroups": [
                     {
-                      "testType": "gen",
+                      "testType": "AFT",
                       "keyLen": 256,
                       "msgLen": 160,
                       "macLen" : 80,
@@ -1102,7 +1129,8 @@
 		"vsId": 1566,
 		"algorithm": "CMAC-TDES",
 		"testGroups": [{
-			"testType": "gen",
+			"testType": "AFT",
+			"direction": "gen",
 			"keyLen": 3,
 			"msgLen": 0,
 			"macLen": 40,
@@ -1123,7 +1151,8 @@
 			]
 		},
 {
-			"testType": "ver",
+			"testType": "AFT",
+			"direction": "gen",
 			"keyLen": 3,
 			"msgLen": 0,
 			"macLen": 40,
@@ -1133,7 +1162,7 @@
 					"key2": "d332ef51e0ce1925",
 					"key3": "dc43459da4c85e85",
 					"msg": ""
-          "mac": "cafecafecafecafecafecafecafecafecafecafe"
+					"mac": "cafecafecafecafecafecafecafecafecafecafe"
 				},
 				{
 					"tcId": 2177,
@@ -1141,7 +1170,7 @@
 					"key2": "c479f813ad1a45d5",
 					"key3": "1cda518af886bf1f",
 					"msg": ""
-          "mac": "cafecafecafecafecafecafecafecafecafecafe"
+					"mac": "cafecafecafecafecafecafecafecafecafecafe"
 				}
 			]
 		}    
